Fixes for styling on Firefox

--- a/src/app/code-block/code-block.component.css
+++ b/src/app/code-block/code-block.component.css
@@ -8,7 +8,7 @@
   white-space: pre-wrap;
 }
 
-.command {
+.input {
   background-color: #D32F2F;
   color: #fff;
 }
